sheep-dog-specs/kubernetes/overlays/prod/service-patch-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-db
spec:
  ports:
    - name: sheep-dog-dev-db
      port: 3306
      nodePort: 30306
  type: NodePort
