sheep-dog-specs/kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sheep-dog-dev-ingress
spec:
  rules:
    - host: aws.sheepdogdev.io
      http:
        paths:
          - path: "/sheep-dog-dev-svc"
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-dev-svc
                port:
                  number: 80
